fixed sidebar wrapping issue

--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -7,8 +7,8 @@
 }
 .main__content aside{
   border-left: 1px solid $border-color;
-  width: 100%;
-  max-width: 400px;
+  width: 400px;
+  max-width: 100%;
   margin-bottom: -1px;
   font-weight: 400;
   font-family: 'Montserrat', sans-serif;
